manifests1/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy1
  namespace: canary-test
  labels:
    app: deploy1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deploy1
  template:
    metadata:
      labels:
        app: deploy1
    spec:
      containers:
      - name: custom-server
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html-volume
        configMap:
          name: deploy1-html
