manifests1/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-deploy1
  namespace: canary-test
  labels:
    app: deploy1
spec:
  selector:
    app: deploy1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
